style.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
   box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
}
/*
  3. Allow percentage-based heights in the application
*/
html, body {
  height: 100%;
}
/*
  Typographic tweaks!
  4. Add accessible line-height
  5. Improve text rendering
*/
body {
 
  -webkit-font-smoothing: antialiased;
}
/*
  6. Improve media defaults
*/
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
/*
  7. Remove built-in form typography styles
*/
input, button, textarea, select {
  font: inherit;
}
/*
  8. Avoid text overflows
*/
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}
/*
  9. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

/* === END OF CSS RESET === */

:root {
   --danger: hsl(0, 100%, 74%);
   --confirm: hsl(154, 59%, 51%);
   --accent-400: hsl(248, 32%, 49%);
   --accent-900: hsl(249, 10%, 26%);
   --accent-200: hsl(246, 25%, 77%);
}

body {
   font-family: 'Poppins', sans-serif;
   background-image: url(images/bg-intro-mobile.png);
   background-size: cover;
   background-color: var(--danger);

   color: white;
}

.container {
   display: flex;
   flex-direction: column;

   align-items: center;
   text-align: center;
}

.left {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
}

h1 {
   font-size: 30px;
   margin-top: 80px; 
   margin-bottom: 30px;
   margin-left: 60px;
   margin-right: 60px;
}

.description {
   margin: 0 30px;
}

h1, .description {
   max-width: 570px;
}

.CTA {
   background-color: var(--accent-400);
   margin-top: 50px;
   margin-bottom: 20px;
   margin-right: 50px;
   margin-left: 50px;
   padding: 25px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}

.bold {
   font-weight: 700;
   display: block;
}

.form {
   margin: 0 50px 50px 50px;
   background-color: white;
   padding: 25px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;

   display: flex;
   flex-direction: column;
   gap: 15px;

   position: relative;
}

.input-container {
   position: relative;
}

input[type="text"] {
   padding: 15px;
   border: 1px solid var(--accent-200);
   border-radius: 5px;

   color: var(--accent-900);
   font-weight: 600;
}

input[type="password"] {
   padding: 15px;
   border: 1px solid var(--accent-200);
   border-radius: 5px;

   color: var(--accent-900);
   font-weight: 600;
}

input:focus {
   outline: none;
}

.error-icon {
   background-image: url(/images/icon-error.svg);
   width: 24px;
   height: 24px;

   position: absolute;
   top: 15px;
   right: 30px;
}

.error-icon-display {
   display: none;
}

.error-text {
   margin-top: 5px;
   margin-right: 5px;
   text-align: right;
   color: var(--danger);
   font-weight: 600;
   font-size: 12px;
   padding-left: 10px;
}

button {
   display: block;
   margin: 15px auto;
   width: 100%;
   font-size: 16px;
   padding: 20px;
   background-color: var(--confirm);
   color: white;
   text-transform: uppercase;
   border: transparent;
   border-radius: 5px;
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}

button:hover {
   filter: brightness(120%);
}

.footnote {
   font-size: 13px;
   color: var(--accent-200);
}

.footnote a {
   font-weight: 700;
   text-decoration: none;
   color: var(--danger);
   display: block;
}

@media screen and (min-width: 1000px) {
   body {
      background-image: url(images/bg-intro-desktop.png)
   }
   .container {
      max-width: 1200px;
      margin: 0 auto;
      flex-direction: row;
   }
   .left {
      text-align: left;
      align-items: flex-start;
      width: 50%;
   }
   h1 {
      font-size: 40px;
      margin: 0 0 30px 40px;
      max-width: 400px;
      line-height: 1.1;
   }
   .description {
      margin: 0 40px 0 40px;
   }
   .right {
      width: 50%;
   }
   .CTA {
      padding: 10px;
   }
   .bold {
      display: inline;
   }
   input[type="text"] {
      width: 100%;
   }
   input[type="password"] {
      width: 100%;
   }
   .error-icon {
      top: 18px;
   }
   button {
      margin-bottom: 0;
   }
   .footnote {
      font-size: 12px;
   }
   .footnote a {
      display: inline;
   }
}

